fix content jump when menu is fixed

--- a/css/style.less
+++ b/css/style.less
@@ -92,6 +92,7 @@ footer {
 	-o-transition: all .3s ease-out;
 	transition: all .3s ease-out;
 	border-radius: 0;
+	margin-bottom: 0;
 	&.navbar-fixed-top {
 		border-bottom: 1px solid @purple;
 		background-color: @purple;
